--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Kaban Task Manager</title>
-  <base href="C:/Program Files/Git/kanban/">
+  <base href="https://krzysiekop.github.io/kanban/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Kris K">
   <link rel="icon" type="image/x-icon" href="assets/icons/favicon.png">
